--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/fin_cred.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/fin_cred.html
@@ -1,34 +1,43 @@
-<div class="ms-rteThemeForeColor-5-4" style="text-align: center;">
-	<b style="font-size: 11pt; background-color: transparent;">
-		<span style="font-size: 14pt; line-height: 115%;">
+
+
+
+<style>
+#myblank {
+font-size: 14pt;
+font-family: Times;
+text-align: justify;
+line-height: 115%; 
+}
+.link {
+font-size: 14pt;
+}
+</style>
+
+
+
+
+<div class="ms-rteElement-Callout2" id="myblank">
+	<h3 style="text-indent: 45px;">
+		<span>Цель программы</span>
+	</h3>
+
+	<div>
+		<p style="text-indent: 45px;">
+			Формирование профессиональных компетенций, требуемых для выполнения нового вида профессиональной деятельности в сфере финансов и кредита.
 			<br/>
-		</span>
-	</b>
+		</p>
+		<p class="link" style="text-indent: 45px;">
+			<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D0%A0%D0%9E%D0%A4%D1%81%D1%82%D0%B0%D0%BD%D0%B4%D0%B0%D1%80%D1%82%D1%8B_%D0%A4%D0%B8%D0%BD%D0%B0%D0%BD%D1%81%D1%8B.pdf">
+				<img class="ms-asset-icon ms-rtePosition-4" src="/_layouts/images/icpdf.png" alt=""/>Профессиональные компетенции</a>
+		</p>
+	</div>
+	<br/>
 </div>
-<div class="ms-rteThemeForeColor-5-4" style="text-align: center;">
-	<b style="font-size: 11pt; background-color: transparent;">
-		<span style="font-size: 14pt; line-height: 115%;">​<span>Цель программы</span>
-		</span>
-	</b>
-	<span>
 
-	</span>
-</div>
-<span class="ms-rteThemeForeColor-5-4">
-</span>
-<p class="MsoNormal ms-rteThemeForeColor-5-4" style="text-align: justify; text-indent: 35.45pt;">
-	<span style="font-size: 14pt; line-height: 115%;">Формирование профессиональных компетенций,
-требуемых для выполнения нового вида профессиональной деятельности в сфере
-финансов и кредита.</span>
-</p>
-<div>
 
-</div>
-<p class="MsoNormal" align="left">
-	<span style="font-size: 14pt; line-height: 115%;">
-		<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D0%A0%D0%9E%D0%A4%D1%81%D1%82%D0%B0%D0%BD%D0%B4%D0%B0%D1%80%D1%82%D1%8B_%D0%A4%D0%B8%D0%BD%D0%B0%D0%BD%D1%81%D1%8B.pdf">Профессиональные компетенции​</a>
-	</span>
-</p>
+
+
+
 <div>
 
 </div>
@@ -81,8 +90,8 @@
 			<td width="430" style="width: 322.25pt; border-color: currentcolor windowtext windowtext currentcolor; border-style: none solid solid none; border-width: medium 1pt 1pt medium; padding: 0cm 5.4pt; height: 20.1pt;">
 				<p class="MsoNormal" align="left">
 					<span style="font-size: 12pt; line-height: 115%; color: black;">очно-заочная</span>
-					<span style="font-size: 12pt; line-height: 115%;"/>
-				</p>
+					<span style="font-size: 12pt; line-height: 115%;">
+				</span></p>
 			</td>
 		</tr>
 		<tr style="height: 20.1pt;">
@@ -103,9 +112,10 @@
 					<b>
 						<span style="font-size: 12pt; line-height: 115%;">Форма аттестации</span>
 					</b>
-					<b/>
-				</p>
-			</td>
+					<b>
+				</b></p>
+<b>
+			</b></td>
 			<td width="430" style="width: 322.25pt; border-color: currentcolor black windowtext currentcolor; border-style: none solid solid none; border-width: medium 1pt 1pt medium; padding: 0cm 5.4pt; height: 20.1pt;">
 				<p class="MsoNormal" align="left">
 					<span style="font-size: 12pt; line-height: 115%;">экзамен</span>
@@ -212,8 +222,8 @@
 	<span style="font-size: 12pt; line-height: 115%;">Экономическая теория</span>
 	<span style="font-size: 13pt; line-height: 115%;">.</span>
 	<b>
-		<span style="font-size: 12pt; line-height: 115%;"/>
-	</b>
+		<span style="font-size: 12pt; line-height: 115%;">
+	</span></b>
 </p>
 <div>
 
@@ -227,8 +237,8 @@
 	<span style="font-size: 12pt; line-height: 115%;">Правовое регулирование финансово-банковской деятельности</span>
 	<span style="font-size: 13pt; line-height: 115%;">.</span>
 	<b>
-		<span style="font-size: 12pt; line-height: 115%;"/>
-	</b>
+		<span style="font-size: 12pt; line-height: 115%;">
+	</span></b>
 </p>
 <div>
 
@@ -241,8 +251,8 @@
 	</b>
 	<span style="font-size: 12pt; line-height: 115%;">Налоги и налогообложение</span>
 	<b>
-		<span style="font-size: 12pt; line-height: 115%;"/>
-	</b>
+		<span style="font-size: 12pt; line-height: 115%;">
+	</span></b>
 </p>
 <div>
 
@@ -256,8 +266,8 @@
 	<span style="font-size: 12pt; line-height: 115%;">Бухгалтерский учет</span>
 	<span style="font-size: 13pt; line-height: 115%;">.</span>
 	<b>
-		<span style="font-size: 12pt; line-height: 115%;"/>
-	</b>
+		<span style="font-size: 12pt; line-height: 115%;">
+	</span></b>
 </p>
 <div>
 
@@ -271,8 +281,8 @@
 	<span style="font-size: 12pt; line-height: 115%;">Анализ деятельности экономических субъектов</span>
 	<span style="font-size: 13pt; line-height: 115%;">.</span>
 	<b>
-		<span style="font-size: 12pt; line-height: 115%;"/>
-	</b>
+		<span style="font-size: 12pt; line-height: 115%;">
+	</span></b>
 </p>
 <div>
 
@@ -286,8 +296,8 @@
 	<span style="font-size: 12pt; line-height: 115%;">Деньги. Кредит. Банки</span>
 	<span style="font-size: 13pt; line-height: 115%;">.</span>
 	<b>
-		<span style="font-size: 12pt; line-height: 115%;"/>
-	</b>
+		<span style="font-size: 12pt; line-height: 115%;">
+	</span></b>
 </p>
 <div>
 
@@ -309,8 +319,8 @@
 	<span style="font-size: 12pt; line-height: 115%;">Финансы</span>
 	<span style="font-size: 13pt; line-height: 115%;">.</span>
 	<b>
-		<span style="font-size: 12pt; line-height: 115%;"/>
-	</b>
+		<span style="font-size: 12pt; line-height: 115%;">
+	</span></b>
 </p>
 <div>
 
@@ -324,8 +334,8 @@
 	<span style="font-size: 12pt; line-height: 115%;">Финансовая политика хозяйствующих субъектов</span>
 	<span style="font-size: 13pt; line-height: 115%;">.</span>
 	<b>
-		<span style="font-size: 12pt; line-height: 115%;"/>
-	</b>
+		<span style="font-size: 12pt; line-height: 115%;">
+	</span></b>
 </p>
 <div>
 
@@ -339,8 +349,8 @@
 	<span style="font-size: 12pt; line-height: 115%;">Банковское дело</span>
 	<span style="font-size: 13pt; line-height: 115%;">.</span>
 	<b>
-		<span style="font-size: 12pt; line-height: 115%;"/>
-	</b>
+		<span style="font-size: 12pt; line-height: 115%;">
+	</span></b>
 </p>
 <div>
 
@@ -354,8 +364,8 @@
 	<span style="font-size: 12pt; line-height: 115%;">Финансовый менеджмент</span>
 	<span style="font-size: 13pt; line-height: 115%;">.</span>
 	<b>
-		<span style="font-size: 12pt; line-height: 115%;"/>
-	</b>
+		<span style="font-size: 12pt; line-height: 115%;">
+	</span></b>
 </p>
 <div>
 
@@ -369,8 +379,8 @@
 	<span style="font-size: 12pt; line-height: 115%;">Финансовые рынки</span>
 	<span style="font-size: 13pt; line-height: 115%;">.</span>
 	<b>
-		<span style="font-size: 12pt; line-height: 115%;"/>
-	</b>
+		<span style="font-size: 12pt; line-height: 115%;">
+	</span></b>
 </p>
 <div>
 
@@ -383,8 +393,8 @@
 	</b>
 	<span style="font-size: 12pt; line-height: 115%;">Инвестиционный анализ.</span>
 	<b>
-		<span style="font-size: 12pt; line-height: 115%;"/>
-	</b>
+		<span style="font-size: 12pt; line-height: 115%;">
+	</span></b>
 </p>
 <div>
 
@@ -397,8 +407,8 @@
 	</b>
 	<span style="font-size: 12pt; line-height: 115%;">Оценка и анализ финансовых рисков.</span>
 	<b>
-		<span style="font-size: 12pt; line-height: 115%;"/>
-	</b>
+		<span style="font-size: 12pt; line-height: 115%;">
+	</span></b>
 </p>
 <div>
 
@@ -411,8 +421,8 @@
 	</b>
 	<span style="font-size: 12pt; line-height: 115%;">Страховое дело.</span>
 	<b>
-		<span style="font-size: 12pt; line-height: 115%;"/>
-	</b>
+		<span style="font-size: 12pt; line-height: 115%;">
+	</span></b>
 </p>
 <div>
 
@@ -426,5 +436,5 @@
 	<span style="font-size: 12pt; line-height: 115%;">Функционально-ориентированные информационные технологии в подготовке финансово-банковских
 специалистов.​</span>
 	<b>
-		<span style="font-size: 12pt; line-height: 115%;"/>
-	</b>​</p>
+		<span style="font-size: 12pt; line-height: 115%;">
+	</span></b>​</p>
