--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/per_vsfer_prof.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/per_vsfer_prof.html
@@ -1,36 +1,45 @@
-<div style="text-align: center;">
-	<b class="ms-rteThemeForeColor-5-4" style="font-size: 11pt; background-color: transparent;">
-		<span style="font-size: 14pt; line-height: 115%;">​</span>
-	</b>
-</div>
-<div style="text-align: center;">
-	<b class="ms-rteThemeForeColor-5-4" style="font-size: 11pt; background-color: transparent;">
-		<span style="font-size: 14pt; line-height: 115%;">Цель программы</span>
-	</b>
-</div>
-<div>
-	<span class="ms-rteThemeForeColor-5-4" style="font-size: 14pt; text-align: justify; text-indent: 35.45pt; background-color: transparent;">
-		<br/>
-	</span>
-</div>
-<div>
-	<b class="ms-rteThemeForeColor-5-4" style="font-size: 11pt; background-color: transparent;">
-		<span style="font-size: 14pt; line-height: 115%;"/>
-	</b>
-	<span class="ms-rteThemeForeColor-5-4" style="font-size: 14pt; text-align: justify; text-indent: 35.45pt; background-color: transparent;">Подготовка специалистов в ​области
-профессионального&#160; перевода&#160;&#160; (устного и письменного)&#160; в сочетании с изучением теории языка и теории
-перевода, общее совершенствование языковой&#160;
-и&#160;&#160; межкультурной компетенций&#160; для повышения эффективности коммуникации в
-сфере профессиональной деятельности.</span>
 
-	<p class="MsoNormal" align="left">
-		<br/>
-	</p>
-	<p class="MsoNormal" align="left">
-		<span style="font-size: 14pt; line-height: 115%;">
-			<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D0%A0%D0%9E%D0%A4%D1%81%D1%82%D0%B0%D0%BD%D0%B4%D0%B0%D1%80%D1%82%D1%8B_%D0%9F%D0%B5%D1%80%D0%B5%D0%B2%D0%BE%D0%B4%D1%87%D0%B8%D0%BA.pdf">Профессиональные компетенции​</a>
-		</span>
-	</p>
+<style>
+#myblank {
+font-size: 14pt;
+font-family: Times;
+text-align: justify;
+line-height: 115%; 
+}
+.link {
+font-size: 14pt;
+}
+</style>
+
+
+
+
+<div class="ms-rteElement-Callout2" id="myblank">
+	<h3 style="text-indent: 45px;">
+		<span>Цель программы</span>
+	</h3>
+
+	<div>
+		<p style="text-indent: 45px;">
+			Подготовка специалистов в ​области профессионального перевода (устного и письменного) в сочетании с изучением теории языка и теории перевода, общее совершенствование языковой и межкультурной компетенций для повышения эффективности коммуникации в сфере профессиональной деятельности.
+			<br/>
+		</p>
+		<p class="link" style="text-indent: 45px;">
+			<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D0%A0%D0%9E%D0%A4%D1%81%D1%82%D0%B0%D0%BD%D0%B4%D0%B0%D1%80%D1%82%D1%8B_%D0%9F%D0%B5%D1%80%D0%B5%D0%B2%D0%BE%D0%B4%D1%87%D0%B8%D0%BA.pdf">
+				<img class="ms-asset-icon ms-rtePosition-4" src="/_layouts/images/icpdf.png" alt=""/>Профессиональные компетенции</a>
+		</p>
+	</div>
+	<br/>
+</div>
+
+
+
+
+
+
+
+
+
 
 	<p class="MsoNormal" style="margin-bottom: 0.0001pt; text-align: justify; line-height: normal;">
 		<b>
@@ -67,9 +76,7 @@
 				</td>
 				<td width="430" style="width: 322.25pt; border-color: currentcolor windowtext windowtext currentcolor; border-style: none solid solid none; border-width: medium 1pt 1pt medium; padding: 0cm 5.4pt; height: 20.1pt;">
 					<p class="MsoNormal" align="left">
-						<span lang="EN-US" style="font-size: 13pt; line-height: 115%;">2</span>
-						<span lang="EN-US" style="font-size: 13pt; line-height: 115%;"> </span>
-						<span style="font-size: 13pt; line-height: 115%;">года</span>
+						<span lang="EN-US" style="font-size: 13pt; line-height: 115%;">2,5 года</span>
 					</p>
 				</td>
 			</tr>
@@ -82,8 +89,8 @@
 				<td width="430" style="width: 322.25pt; border-color: currentcolor windowtext windowtext currentcolor; border-style: none solid solid none; border-width: medium 1pt 1pt medium; padding: 0cm 5.4pt; height: 20.1pt;">
 					<p class="MsoNormal" align="left">
 						<span style="font-size: 12pt; line-height: 115%; color: black;">очно-заочная</span>
-						<span style="font-size: 12pt; line-height: 115%;"/>
-					</p>
+						<span style="font-size: 12pt; line-height: 115%;">
+					</span></p>
 				</td>
 			</tr>
 			<tr style="height: 20.1pt;">
@@ -104,9 +111,10 @@
 						<b>
 							<span style="font-size: 12pt; line-height: 115%;">Форма аттестации</span>
 						</b>
-						<b/>
-					</p>
-				</td>
+						<b>
+					</b></p>
+<b>
+				</b></td>
 				<td width="430" style="width: 322.25pt; border-color: currentcolor black windowtext currentcolor; border-style: none solid solid none; border-width: medium 1pt 1pt medium; padding: 0cm 5.4pt; height: 20.1pt;">
 					<p class="MsoNormal" align="left">
 						<span style="font-size: 13pt; line-height: 115%;">квалификационный</span>
@@ -124,7 +132,7 @@
 					</p>
 				</td>
 				<td width="430" style="width: 322.25pt; border-color: currentcolor black windowtext currentcolor; border-style: none solid solid none; border-width: medium 1pt 1pt medium; padding: 0cm 5.4pt; height: 20.1pt;">
-					<p class="MsoNormal" align="left">38000 руб. (ежегодно)</p>
+					<p class="MsoNormal" align="left">40 000,00 руб. в год</p>
 				</td>
 			</tr>
 			<tr style="height: 20.1pt;">
@@ -159,28 +167,34 @@
 		<span style="text-indent: -18pt; background-color: transparent; font-size: 12pt; line-height: 115%;">анкета;</span>
 	</p>
 	<p class="MsoNormal" style="text-align: justify;">
-		<span style="text-indent: -18pt; background-color: transparent; font-size: 12pt; line-height: 115%;"/>
+		<span style="text-indent: -18pt; background-color: transparent; font-size: 12pt; line-height: 115%;">
 		<span style="text-indent: -18pt; background-color: transparent; font-size: 14pt; line-height: 115%; font-family: symbol;">&#160; &#160; &#160; &#160;·<span style="font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;&#160;&#160;
 			</span>
 		</span>
 		<span style="text-indent: -18pt; background-color: transparent; font-size: 12pt; line-height: 115%;">заявление;</span>
-	</p>
+	</span></p>
 	<p class="MsoNormal" style="text-align: justify;">
-		<span style="text-indent: -18pt; background-color: transparent; font-size: 12pt; line-height: 115%;"/>
+		<span style="text-indent: -18pt; background-color: transparent; font-size: 12pt; line-height: 115%;">
 		<span style="text-indent: -18pt; background-color: transparent; font-size: 14pt; line-height: 115%; font-family: symbol;">&#160; &#160; &#160; &#160;·<span style="font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;&#160;&#160;
 			</span>
 		</span>
-		<span style="text-indent: -18pt; background-color: transparent; font-size: 12pt; line-height: 115%;">договор</span>
+		<span style="text-indent: -18pt; background-color: transparent; font-size: 12pt; line-height: 115%;">
+		
+		<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_qualification_Fiz_lico.docx">договор​</a>
+		
+		
+		
+		</span>
 		<span style="text-indent: -18pt; background-color: transparent; font-size: 12pt; line-height: 115%;">;</span>
-	</p>
+	</span></p>
 	<p class="MsoNormal" style="text-align: justify;">
-		<span style="text-indent: -18pt; background-color: transparent; font-size: 12pt; line-height: 115%;"/>
+		<span style="text-indent: -18pt; background-color: transparent; font-size: 12pt; line-height: 115%;">
 		<span style="text-indent: -18pt; background-color: transparent; font-size: 14pt; line-height: 115%; font-family: symbol;">&#160; &#160; &#160; ·<span style="font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;&#160;&#160;
 			</span>
 		</span>
 		<span style="text-indent: -18pt; background-color: transparent; font-size: 12pt; line-height: 115%;">другие документы (копия паспорта, копия
 документа об образовании, фотографии и др.)</span>
-	</p>
+	</span></p>
 
 	<p class="MsoNormal" style="text-align: justify;">
 		<b>
@@ -202,8 +216,8 @@
 		</b>
 		<span style="font-size: 13pt; line-height: 115%;">Введение в языкознание.</span>
 		<b>
-			<span style="font-size: 12pt; line-height: 115%;"/>
-		</b>
+			<span style="font-size: 12pt; line-height: 115%;">
+		</span></b>
 	</p>
 
 	<p class="MsoListParagraphCxSpMiddle" style="margin-left: 39pt; text-align: justify; text-indent: -18pt;">
@@ -214,8 +228,8 @@
 		</b>
 		<span style="font-size: 13pt; line-height: 115%;">Теоретическая грамматика.</span>
 		<b>
-			<span style="font-size: 12pt; line-height: 115%;"/>
-		</b>
+			<span style="font-size: 12pt; line-height: 115%;">
+		</span></b>
 	</p>
 
 	<p class="MsoListParagraphCxSpMiddle" style="margin-left: 39pt; text-align: justify; text-indent: -18pt;">
@@ -226,8 +240,8 @@
 		</b>
 		<span style="font-size: 13pt; line-height: 115%;">Лексикология</span>
 		<b>
-			<span style="font-size: 12pt; line-height: 115%;"/>
-		</b>
+			<span style="font-size: 12pt; line-height: 115%;">
+		</span></b>
 	</p>
 
 	<p class="MsoListParagraphCxSpMiddle" style="margin-left: 39pt; text-align: justify; text-indent: -18pt;">
@@ -238,8 +252,8 @@
 		</b>
 		<span style="font-size: 13pt; line-height: 115%;">Стилистика, изучаемого языка (английского).</span>
 		<b>
-			<span style="font-size: 12pt; line-height: 115%;"/>
-		</b>
+			<span style="font-size: 12pt; line-height: 115%;">
+		</span></b>
 	</p>
 
 	<p class="MsoListParagraphCxSpMiddle" style="margin-left: 39pt; text-align: justify; text-indent: -18pt;">
@@ -250,8 +264,8 @@
 		</b>
 		<span style="font-size: 13pt; line-height: 115%;">Практический курс иностранного языка (английского).</span>
 		<b>
-			<span style="font-size: 12pt; line-height: 115%;"/>
-		</b>
+			<span style="font-size: 12pt; line-height: 115%;">
+		</span></b>
 	</p>
 
 	<p class="MsoListParagraphCxSpLast" style="margin-left: 39pt; text-align: justify; text-indent: -18pt;">
@@ -262,8 +276,8 @@
 		</b>
 		<span style="font-size: 13pt; line-height: 115%;">Стилистика русского языка и культура речи.</span>
 		<b>
-			<span style="font-size: 12pt; line-height: 115%;"/>
-		</b>
+			<span style="font-size: 12pt; line-height: 115%;">
+		</span></b>
 	</p>
 
 	<p class="MsoNormal" style="text-align: justify;">
@@ -280,8 +294,8 @@
 		</b>
 		<span style="font-size: 13pt; line-height: 115%;">Теория перевода.</span>
 		<b>
-			<span style="font-size: 12pt; line-height: 115%;"/>
-		</b>
+			<span style="font-size: 12pt; line-height: 115%;">
+		</span></b>
 	</p>
 
 	<p class="MsoListParagraphCxSpMiddle" style="text-align: justify; text-indent: -18pt;">
@@ -293,8 +307,8 @@
 		<span style="font-size: 13pt; line-height: 115%;">Практический курс профессионально ориентированного
 перевода.</span>
 		<b>
-			<span style="font-size: 12pt; line-height: 115%;"/>
-		</b>
+			<span style="font-size: 12pt; line-height: 115%;">
+		</span></b>
 	</p>
 
 	<p class="MsoListParagraphCxSpMiddle" style="text-align: justify; text-indent: -18pt;">
@@ -305,8 +319,8 @@
 		</b>
 		<span style="font-size: 13pt; line-height: 115%;">Деловой иностранный язык (английский).</span>
 		<b>
-			<span style="font-size: 12pt; line-height: 115%;"/>
-		</b>
+			<span style="font-size: 12pt; line-height: 115%;">
+		</span></b>
 	</p>
 
 	<p class="MsoListParagraphCxSpMiddle" style="text-align: justify; text-indent: -18pt;">
@@ -317,8 +331,8 @@
 		</b>
 		<span style="font-size: 13pt; line-height: 115%;">Практикум по переводу.</span>
 		<b>
-			<span style="font-size: 12pt; line-height: 115%;"/>
-		</b>
+			<span style="font-size: 12pt; line-height: 115%;">
+		</span></b>
 	</p>
 
 	<p class="MsoListParagraphCxSpLast" style="text-align: justify; text-indent: -18pt;">
@@ -329,8 +343,8 @@
 		</b>
 		<span style="font-size: 13pt; line-height: 115%;">Лингвострановедение.</span>
 		<b>
-			<span style="font-size: 12pt; line-height: 115%;"/>
-		</b>
+			<span style="font-size: 12pt; line-height: 115%;">
+		</span></b>
 	</p>
 ​</div>
 ​
