--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/gb.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/gb.html
@@ -1,93 +1,40 @@
-<div>
+<style>
+#myblank {
+font-size: 14pt;
+font-family: Times;
+text-align: justify;
+line-height: 115%; 
+}
+.link {
+font-size: 14pt;
+}
+</style>
 
 
 
 
 
 
+<div class="ms-rteElement-Callout2" id="myblank">
+	<h3 style="text-indent: 45px;">
+		<span>Цель программы</span>
+	</h3>
 
-
-
-
-
-	<style>
-.ExternalClass p.MsoNormal, .ExternalClass li.MsoNormal, .ExternalClass div.MsoNormal
-{margin:0cm;margin-bottom:.0001pt;text-align:center;text-indent:24.1pt;line-height:107%;font-size:11.0pt;font-family:"Calibri","sans-serif";}
-.ExternalClass h2
-{margin-top:10.0pt;margin-right:0cm;margin-bottom:0cm;margin-left:0cm;margin-bottom:.0001pt;text-align:center;text-indent:24.1pt;line-height:107%;page-break-after:avoid;font-size:13.0pt;font-family:"Cambria","serif";color:#4F81BD;}
-.ExternalClass h3
-{margin-right:0cm;margin-left:0cm;font-size:13.5pt;font-family:"Times New Roman","serif";}
-.ExternalClass a:link, .ExternalClass span.MsoHyperlink
-{color:blue;text-decoration:underline;text-underline:single;}
-.ExternalClass a:visited, .ExternalClass span.MsoHyperlinkFollowed
-{color:purple;text-decoration:underline;text-underline:single;}
-.ExternalClass p.MsoListParagraph, .ExternalClass li.MsoListParagraph, .ExternalClass div.MsoListParagraph
-{margin-top:0cm;margin-right:0cm;margin-bottom:0cm;margin-left:36.0pt;margin-bottom:.0001pt;text-align:center;text-indent:24.1pt;line-height:107%;font-size:11.0pt;font-family:"Calibri","sans-serif";}
-.ExternalClass p.MsoListParagraphCxSpFirst, .ExternalClass li.MsoListParagraphCxSpFirst, .ExternalClass div.MsoListParagraphCxSpFirst
-{margin-top:0cm;margin-right:0cm;margin-bottom:0cm;margin-left:36.0pt;margin-bottom:.0001pt;text-align:center;text-indent:24.1pt;line-height:107%;font-size:11.0pt;font-family:"Calibri","sans-serif";}
-.ExternalClass p.MsoListParagraphCxSpMiddle, .ExternalClass li.MsoListParagraphCxSpMiddle, .ExternalClass div.MsoListParagraphCxSpMiddle
-{margin-top:0cm;margin-right:0cm;margin-bottom:0cm;margin-left:36.0pt;margin-bottom:.0001pt;text-align:center;text-indent:24.1pt;line-height:107%;font-size:11.0pt;font-family:"Calibri","sans-serif";}
-.ExternalClass p.MsoListParagraphCxSpLast, .ExternalClass li.MsoListParagraphCxSpLast, .ExternalClass div.MsoListParagraphCxSpLast
-{margin-top:0cm;margin-right:0cm;margin-bottom:0cm;margin-left:36.0pt;margin-bottom:.0001pt;text-align:center;text-indent:24.1pt;line-height:107%;font-size:11.0pt;font-family:"Calibri","sans-serif";}
-.ExternalClass span.2
-{font-family:"Cambria","serif";color:#4F81BD;font-weight:bold;}
-.ExternalClass span.3
-{font-family:"Times New Roman","serif";font-weight:bold;}
-.ExternalClass p.ms-rteelement-p, .ExternalClass li.ms-rteelement-p, .ExternalClass div.ms-rteelement-p
-{margin-right:0cm;margin-left:0cm;font-size:12.0pt;font-family:"Times New Roman","serif";}
-.ExternalClass .MsoChpDefault
-{font-family:"Calibri","sans-serif";}
-.ExternalClass .MsoPapDefault
-{text-align:center;text-indent:24.1pt;line-height:107%;}
-@page WordSection1
-{size:612.0pt 792.0pt;margin:2.0cm 42.5pt 2.0cm 3.0cm;}
-.ExternalClass div.WordSection1
-{page:WordSection1;}
-.ExternalClass ol
-{margin-bottom:0cm;}
-.ExternalClass ul
-{margin-bottom:0cm;}
-	</style>
-
-
-
-
-
-
+	<div>
+		<p style="text-indent: 45px;">
+			Подготовка слушателей к сдаче профессионального экзамена по профессиональному стандарту «Бухгалтер», по должности «Главный бухгалтер» уровень квалификации 6, трудовая функция В/01.6 «Составление бухгалтерской (финансовой) отчетности» в рамках независимой оценки квалификации
+			<br/>
+		</p>
+		<p class="link" style="text-indent: 45px;">
+			<a href="/fil/smolensk/dpo/retraining/Documents/%D0%93%D0%BB%D0%91%D0%A3_%D0%BF%D1%80%D0%BE%D1%84_%D0%BA%D0%BE%D0%BC%D0%BF%D0%B5%D1%82%D0%B5%D0%BD%D1%86%D0%B8%D0%B8.pdf">
+				<img class="ms-asset-icon ms-rtePosition-4" src="/_layouts/images/icpdf.png" alt=""/>Профессиональные компетенции</a>
+		</p>
+	</div>
+	<br/>
 </div>
-<h2 style="background: white none repeat scroll 0% 0%;">
-	<span style="font-size: 14pt; line-height: 107%; font-family: &quot;times new roman&quot;, &quot;serif&quot;; color: windowtext;">
-		<br/>
-	</span>
-</h2>
-<div>
 
-</div>
-<h3 style="margin: 6pt 0cm; background: whitesmoke none repeat scroll 0% 0%; vertical-align: top;">
-	<a name="mainContent"/>
-	<span style="font-size: 12pt;">Цель программы</span>
-</h3>
-<div>
 
-</div>
-<p class="MsoNormal" style="text-align: justify; background: whitesmoke none repeat scroll 0% 0%; vertical-align: top;">
-	<span style="font-size: 12pt; line-height: 107%; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Подготовка слушателей к сдаче профессионального экзамена по
-профессиональному стандарту «Бухгалтер», по должности «Главный бухгалтер»
-уровень квалификации 6, трудовая функция В/01.6 «Составление бухгалтерской
-(финансовой) отчетности» в рамках<span>&#160;
-		</span>независимой оценки квалификации</span>
-	<span style="font-size: 12pt; line-height: 107%; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">.</span>
-</p>
-<div>
 
-</div>
-<h3 style="background: white none repeat scroll 0% 0%; vertical-align: top;">
-	<a href="/fil/smolensk/dpo/retraining/Documents/%D0%93%D0%BB%D0%91%D0%A3_%D0%BF%D1%80%D0%BE%D1%84_%D0%BA%D0%BE%D0%BC%D0%BF%D0%B5%D1%82%D0%B5%D0%BD%D1%86%D0%B8%D0%B8.pdf">
-		<u>
-			<span style="font-size: 12pt;">Профессиональные компетенции</span>
-		</u>
-	</a>
-</h3>
 <h3 class="ms-rteElement-H3B">Краткая информация</h3>
 <table class="ms-rteTable-1" width="100%" cellspacing="0">
 	<tbody>
@@ -195,13 +142,6 @@
 <div>
 
 </div>
-
-
-
-
-
-
-
 <div class="ms-rteElement-Callout4">
 	<div>Необходимые&#160;документы для поступления:</div>
 	<ul>
