--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/prav_reg.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/prav_reg.html
@@ -1,46 +1,43 @@
-<div class="ms-rteElement-Callout2">
-	<h3 class="ms-rteElement-H3B">Цель программы</h3>
-	<p>
+
+<style>
+#myblank {
+font-size: 14pt;
+font-family: Times;
+text-align: justify;
+line-height: 115%; 
+}
+.link {
+font-size: 14pt;
+}
+</style>
 
 
 
 
+<div class="ms-rteElement-Callout2" id="myblank">
+	<h3 style="text-indent: 45px;">
+		<span>Цель программы</span>
+	</h3>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-	</p>
-	<p>
-		<span>
-			<span>Формирование новых профессиональных компетенций, требуемых для выполнения
-нового вида профессиональной деятельности в сфере правового регулирования
-деятельности организации</span>
-		</span>
-		<span>.</span>
-	</p>
-
-
-
-
-
-	<p>
-		<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D1%80%D0%BE%D1%84%D0%B5%D1%81%D1%81%D0%B8%D0%BE%D0%BD%D0%B0%D0%BB%D1%8C%D0%BD%D0%B0%D0%B5%20%D0%BA%D0%BE%D0%BC%D0%BF%D0%B5%D1%82%D0%B5%D0%BD%D1%86%D0%B8%D0%B8%20%D0%9F%D0%A0%20.pdf">
-			<img class="ms-asset-icon ms-rtePosition-4" src="/_layouts/images/icpdf.png" alt=""/>
-			<span>Профессиональные компетенции</span>
-		</a>
-		<br/>
-	</p>
+	<div>
+		<p style="text-indent: 45px;">
+			Формирование новых профессиональных компетенций, требуемых для выполнения нового вида профессиональной деятельности в сфере правового регулирования деятельности организации.
+			<br/>
+		</p>
+		<p class="link" style="text-indent: 45px;">
+			<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D1%80%D0%BE%D1%84%D0%B5%D1%81%D1%81%D0%B8%D0%BE%D0%BD%D0%B0%D0%BB%D1%8C%D0%BD%D0%B0%D0%B5%20%D0%BA%D0%BE%D0%BC%D0%BF%D0%B5%D1%82%D0%B5%D0%BD%D1%86%D0%B8%D0%B8%20%D0%9F%D0%A0%20.pdf">
+				<img class="ms-asset-icon ms-rtePosition-4" src="/_layouts/images/icpdf.png" alt=""/>Профессиональные компетенции</a>
+		</p>
+	</div>
+	<br/>
 </div>
+
+
+
+
+
+
+
 <a href="/fil/smolensk/dpo/retraining/Documents/finmen.pdf">
 
 ​</a>
