--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/buh.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/buh.html
@@ -1,6 +1,42 @@
-<div class="ms-rteElement-Callout2"><h3 class="ms-rteElement-H3B">Цель программы</h3>
-<p>Формирование профессиональных компетенций, требуемых для выполнения нового вида профессиональной деятельности в сфере бухгалтерского учета, анализа и аудита.</p>
-<p><a target="_blank" href="/fil/smolensk/dpo/retraining/Documents/buaia.pdf"><img src="/_layouts/images/icpdf.png" class="ms-asset-icon ms-rtePosition-4" alt=""/>Профессиональные компетенции</a></p></div>
+
+
+<style>
+#myblank {
+font-size: 14pt;
+font-family: Times;
+text-align: justify;
+line-height: 115%; 
+}
+.link {
+font-size: 14pt;
+}
+</style>
+
+
+
+
+<div class="ms-rteElement-Callout2" id="myblank">
+	<h3 style="text-indent: 45px;">
+		<span>Цель программы</span>
+	</h3>
+
+	<div>
+		<p style="text-indent: 45px;">
+			Формирование профессиональных компетенций, требуемых для выполнения нового вида профессиональной деятельности в сфере бухгалтерского учета, анализа и аудита.
+			<br/>
+		</p>
+		<p class="link" style="text-indent: 45px;">
+			<a href="/fil/smolensk/dpo/retraining/Documents/buaia.pdf">
+				<img class="ms-asset-icon ms-rtePosition-4" src="/_layouts/images/icpdf.png" alt=""/>Профессиональные компетенции</a>
+		</p>
+	</div>
+	<br/>
+</div>
+
+
+
+
+
 <h3 class="ms-rteElement-H3B">Краткая информация</h3>
 <table class="ms-rteTable-1" width="100%" cellspacing="0"><tbody><tr class="ms-rteTableEvenRow-1"><td colspan="1" rowspan="1" class="ms-rteTableEvenCol-1"><p class="ms-rteElement-P"><strong>Категория слушателей</strong></p></td>
 <td colspan="1" rowspan="1" class="ms-rteTableOddCol-1"><ul><li><div class="ms-rteElement-P"><span>лица, имеющие среднее профессиональное или высшее образование;</span></div></li>
