--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/ekupr.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/ekupr.html
@@ -1,22 +1,46 @@
-<div class="ms-rteElement-Callout2">
-	<h3 class="ms-rteElement-H3B">Цель программы</h3>
-	<p>Формирование профессиональных компетенций, требуемых для выполнения 
-нового вида профессиональной деятельности в сфере экономики труда и управления персоналом.<br/>
-	</p>
-	<p>
-		<a href="/fil/smolensk/dpo/retraining/Documents/ektrud.pdf" target="_blank">
-			<img class="ms-asset-icon ms-rtePosition-4" src="/_layouts/images/icpdf.png" alt=""/>
-			<span>Профессиональные компетенции</span>
-		</a>
-		<a href="/fil/smolensk/dpo/retraining/Documents/finmen.pdf">
-			<span style="display: inline-block;"/>
-		</a>
-		<br/>
-	</p>
+
+
+<style>
+#myblank {
+font-size: 14pt;
+font-family: Times;
+text-align: justify;
+line-height: 115%; 
+}
+.link {
+font-size: 14pt;
+}
+</style>
+
+
+
+
+<div class="ms-rteElement-Callout2" id="myblank">
+	<h3 style="text-indent: 45px;">
+		<span>Цель программы</span>
+	</h3>
+
+	<div>
+		<p style="text-indent: 45px;">
+			Формирование профессиональных компетенций, требуемых для выполнения нового вида профессиональной деятельности в сфере экономики труда и управления персоналом.
+			<br/>
+		</p>
+		<p class="link" style="text-indent: 45px;">
+			<a href="/fil/smolensk/dpo/retraining/Documents/ektrud.pdf">
+				<img class="ms-asset-icon ms-rtePosition-4" src="/_layouts/images/icpdf.png" alt=""/>Профессиональные компетенции</a>
+		</p>
+	</div>
+	<br/>
 </div>
-<a href="/fil/smolensk/dpo/retraining/Documents/finmen.pdf">
-	<h3 class="ms-rteElement-H3B"/>
-​</a>
+
+
+
+
+
+
+
+
+
 <h3 class="ms-rteElement-H3B">Краткая информация</h3>
 <table class="ms-rteTable-1" width="100%" cellspacing="0">
 	<tbody>
@@ -108,7 +132,7 @@
 		</tr>
 	</tbody>
 </table>
-<div/>
+<div>
 
 
 
@@ -129,9 +153,9 @@
 					<a href="/fil/smolensk/dpo/retraining/Documents/zayav-pp.docx" target="_blank">заявление</a>
 				</font>;</li>
 			<li>
-				<a href="/fil/smolensk/dpo/Documents/dogovor.docx" target="_blank"/>договоры:<ul>
-					<li>
-					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Fiz_lico.docx">Физическое лицо</a>
+				<a href="/fil/smolensk/dpo/Documents/dogovor.docx" target="_blank">договоры:</a><ul><a href="/fil/smolensk/dpo/Documents/dogovor.docx" target="_blank">
+					</a><li><a href="/fil/smolensk/dpo/Documents/dogovor.docx" target="_blank">
+					</a><a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Fiz_lico.docx">Физическое лицо</a>
 				</li>
 				<li>
 					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Ur_lico.docx">Юридическое лицо</a>
@@ -161,8 +185,8 @@
 		</li>
 		<li>
 			<span>
-				<span style="display: inline-block;"/>Менеджмент</span>
-		</li>
+				<span style="display: inline-block;">Менеджмент</span>
+		</span></li>
 		<li>
 			<span>Экономика организаций</span>
 		</li>
@@ -171,10 +195,10 @@
 		</li>
 		<li>
 			<span>Бухгалтерский учет<span style="display: inline-block;">
-					<span style="display: inline-block;"/>
+					<span style="display: inline-block;">
 				</span>
 			</span>
-		</li>
+		</span></li>
 	</ul>
 	<p>
 		<strong>Специальные дисциплины</strong>
@@ -184,8 +208,8 @@
 		<li>Специальные дисциплины</li>
 		<li>Экономика и социология труда</li>
 		<li>Рынок труда</li>
-		<li>Управление персоналом<span style="display: inline-block;"/>
-		</li>
+		<li>Управление персоналом<span style="display: inline-block;">
+		</span></li>
 		<li>Управление человеческими ресурсами</li>
 		<li>Организационное поведение</li>
 		<li>Корпоративная социальная ответственность</li>
@@ -227,4 +251,4 @@
 </div>
 <div>
 	<br/>
-</div>
+</div></div>
