--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/fin-men.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/fin-men.html
@@ -1,21 +1,45 @@
-<div class="ms-rteElement-Callout2">
-	<h3 class="ms-rteElement-H3B">Цель программы</h3>
-	<p>Формирование профессиональных компетенций, требуемых для выполнения 
-нового вида профессиональной деятельности в сфере финансового менеджмента.</p>
-	<p>
-		<span>
+
+<style>
+#myblank {
+font-size: 14pt;
+font-family: Times;
+text-align: justify;
+line-height: 115%; 
+}
+.link {
+font-size: 14pt;
+}
+</style>
+
+
+
+
+<div class="ms-rteElement-Callout2" id="myblank">
+	<h3 style="text-indent: 45px;">
+		<span>Цель программы</span>
+	</h3>
+
+	<div>
+		<p style="text-indent: 45px;">
+			Формирование профессиональных компетенций, требуемых для выполнения нового вида профессиональной деятельности в сфере финансового менеджмента.
+			<br/>
+		</p>
+		<p class="link" style="text-indent: 45px;">
 			<a href="/fil/smolensk/dpo/retraining/Documents/finmen.pdf">
 				<img class="ms-asset-icon ms-rtePosition-4" src="/_layouts/images/icpdf.png" alt=""/>Профессиональные компетенции</a>
-			<a href="/fil/smolensk/dpo/retraining/Documents/finmen.pdf">
-				<span style="display: inline-block;"/>
-			</a>
-		</span>
-		<br/>
-	</p>
+		</p>
+	</div>
+	<br/>
 </div>
-<a href="/fil/smolensk/dpo/retraining/Documents/finmen.pdf">
-	<h3 class="ms-rteElement-H3B"/>
-​</a>
+
+
+
+
+
+
+
+
+
 <h3 class="ms-rteElement-H3B">Краткая информация</h3>
 <table class="ms-rteTable-1" width="100%" cellspacing="0">
 	<tbody>
@@ -107,7 +131,7 @@
 		</tr>
 	</tbody>
 </table>
-<div/>
+<div>
 
 
 
@@ -127,9 +151,9 @@
 					<a target="_blank" href="/fil/smolensk/dpo/retraining/Documents/zayav-pp.docx">заявление</a>
 				</font>;</li>
 			<li>
-				<a target="_blank" href="/fil/smolensk/dpo/Documents/dogovor.docx"/>договоры:<ul>
-					<li>
-					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Fiz_lico.docx">Физическое лицо</a>
+				<a target="_blank" href="/fil/smolensk/dpo/Documents/dogovor.docx">договоры:</a><ul><a target="_blank" href="/fil/smolensk/dpo/Documents/dogovor.docx">
+					</a><li><a target="_blank" href="/fil/smolensk/dpo/Documents/dogovor.docx">
+					</a><a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Fiz_lico.docx">Физическое лицо</a>
 				</li>
 				<li>
 					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Ur_lico.docx">Юридическое лицо</a>
@@ -178,9 +202,9 @@
 			<div class="ms-rteElement-P">Управленческие финансы</div>
 		</li>
 		<li>
-			<div class="ms-rteElement-P">Финансовое <span>планирование</span> и <span>прогнозированние <span style="display: inline-block;"/>
+			<div class="ms-rteElement-P">Финансовое <span>планирование</span> и <span>прогнозированние <span style="display: inline-block;">
 				</span>
-			</div>
+			</span></div>
 		</li>
 
 		<li>
@@ -199,10 +223,11 @@
 		<li>
 			<a href="/fil/smolensk/dpo/Documents/Kval/%D0%A2%D0%B5%D0%BC%D1%8B%20%D0%92%D0%90%D0%A0-%20%D0%A4%D0%9C.pdf">Рекомендуемые темы</a>
 			<br/>
-			<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D0%BE%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5%20%D0%BE%20%D0%92%D0%90%D0%A0%20%D1%81%D0%BB%D1%83%D1%88%D0%B0%D1%82%D0%B5%D0%BB%D0%B5%D0%B9%20(%D0%BF%D1%80%D0%B8%D0%BA%D0%B0%D0%B7%20%E2%84%96%201781_%D0%BE%20%D0%BE%D1%82%2030.09.2014).pdf"/>
-		</li>
-		<li>
 			<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D0%BE%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5%20%D0%BE%20%D0%92%D0%90%D0%A0%20%D1%81%D0%BB%D1%83%D1%88%D0%B0%D1%82%D0%B5%D0%BB%D0%B5%D0%B9%20(%D0%BF%D1%80%D0%B8%D0%BA%D0%B0%D0%B7%20%E2%84%96%201781_%D0%BE%20%D0%BE%D1%82%2030.09.2014).pdf">
+		</a></li>
+<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D0%BE%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5%20%D0%BE%20%D0%92%D0%90%D0%A0%20%D1%81%D0%BB%D1%83%D1%88%D0%B0%D1%82%D0%B5%D0%BB%D0%B5%D0%B9%20(%D0%BF%D1%80%D0%B8%D0%BA%D0%B0%D0%B7%20%E2%84%96%201781_%D0%BE%20%D0%BE%D1%82%2030.09.2014).pdf">
+		</a><li><a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D0%BE%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5%20%D0%BE%20%D0%92%D0%90%D0%A0%20%D1%81%D0%BB%D1%83%D1%88%D0%B0%D1%82%D0%B5%D0%BB%D0%B5%D0%B9%20(%D0%BF%D1%80%D0%B8%D0%BA%D0%B0%D0%B7%20%E2%84%96%201781_%D0%BE%20%D0%BE%D1%82%2030.09.2014).pdf">
+			</a><a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D0%BE%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5%20%D0%BE%20%D0%92%D0%90%D0%A0%20%D1%81%D0%BB%D1%83%D1%88%D0%B0%D1%82%D0%B5%D0%BB%D0%B5%D0%B9%20(%D0%BF%D1%80%D0%B8%D0%BA%D0%B0%D0%B7%20%E2%84%96%201781_%D0%BE%20%D0%BE%D1%82%2030.09.2014).pdf">
 				<span>Методические указания по написанию и защите выпускной&#160; аттестационной <br/>работы слушателями&#160; дополнительного профессионального образования (профессиональная переподготовка<span style="display: inline-block;">)</span>
 				</span>
 			</a>
@@ -215,4 +240,5 @@
 </div>
 <div>
 	<br/>
+</div>
 </div>
