--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/gos_mu_upr.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/gos_mu_upr.html
@@ -1,81 +1,38 @@
+<style>
+#myblank {
+font-size: 14pt;
+font-family: Times;
+text-align: justify;
+line-height: 115%; 
+}
+.link {
+font-size: 14pt;
+}
+</style>
 
 
 
 
+<div class="ms-rteElement-Callout2" id="myblank">
+	<h3 style="text-indent: 45px;">
+		<span>Цель программы</span>
+	</h3>
 
-
-<a name="mainContent"/>
-
-
-
-
-<div>
-
+	<div>
+		<p style="text-indent: 45px;">
+			Формирование профессиональных компетенций, требуемых для выполнения нового вида профессиональной деятельности в сфере государственного и муниципального управления.
+			<br/>
+		</p>
+		<p class="link" style="text-indent: 45px;">
+			<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D1%80%D0%BE%D1%84%D0%B5%D1%81%D1%81%D0%B8%D0%BE%D0%BD%D0%B0%D0%BB%D1%8C%D0%BD%D0%B0%D0%B5%20%D0%BA%D0%BE%D0%BC%D0%BF%D0%B5%D1%82%D0%B5%D0%BD%D1%86%D0%B8%D0%B8%20%D0%93%D0%9C%D0%A3%20.pdf">
+				<img class="ms-asset-icon ms-rtePosition-4" src="/_layouts/images/icpdf.png" alt=""/>Профессиональные компетенции</a>
+		</p>
+	</div>
+	<br/>
 </div>
 
 
-<div class="article article-left">
 
-	<div class="article-content">
-		<div style="display: inline;">
-			<div class="ms-rteElement-Callout2">
-				<h3 class="ms-rteElement-H3B">Цель программы</h3>
-				<p>
-
-
-
-
-
-
-
-
-
-
-
-					<style>
-.ExternalClass p.MsoNormal, .ExternalClass li.MsoNormal, .ExternalClass div.MsoNormal
-{margin:0cm;margin-bottom:.0001pt;text-align:center;text-indent:24.1pt;line-height:107%;font-size:11.0pt;font-family:"Calibri","sans-serif";}
-.ExternalClass .MsoChpDefault
-{font-family:"Calibri","sans-serif";}
-.ExternalClass .MsoPapDefault
-{text-align:center;text-indent:24.1pt;line-height:107%;}
-@page WordSection1
-{size:612.0pt 792.0pt;margin:2.0cm 42.5pt 2.0cm 3.0cm;}
-.ExternalClass div.WordSection1
-{page:WordSection1;}
-					</style>
-
-
-
-
-
-
-				</p>
-				<p>
-					<span>Формирование профессиональных компетенций, требуемых для
-выполнения нового вида профессиональной деятельности в сфере государственного и
-муниципального управления.</span>
-				</p>
-
-
-
-
-
-
-				<p>
-					<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D1%80%D0%BE%D1%84%D0%B5%D1%81%D1%81%D0%B8%D0%BE%D0%BD%D0%B0%D0%BB%D1%8C%D0%BD%D0%B0%D0%B5%20%D0%BA%D0%BE%D0%BC%D0%BF%D0%B5%D1%82%D0%B5%D0%BD%D1%86%D0%B8%D0%B8%20%D0%93%D0%9C%D0%A3%20.pdf">
-						<img class="ms-asset-icon ms-rtePosition-4" src="/_layouts/images/icpdf.png" alt=""/>
-						<span>Профессиональные компетенции</span>
-					</a>
-					<a href="/fil/smolensk/dpo/retraining/Documents/finmen.pdf">
-						<span style="display: inline-block;"/>
-					</a>
-					<br/>
-				</p>
-			</div>
-			<a href="/fil/smolensk/dpo/retraining/Documents/finmen.pdf">
-
-​</a>
 			<h3 class="ms-rteElement-H3B">Краткая информация</h3>
 			<table class="ms-rteTable-1" width="100%" cellspacing="0">
 				<tbody>
@@ -149,7 +106,7 @@
 {margin-bottom:0cm;}
 .ExternalClass ul
 {margin-bottom:0cm;}
-							</style>
+</style>
 							<ul>
 								<li>
 									<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">будних дня в неделю&#160;с 18.30 до 21.30</span>
@@ -162,8 +119,8 @@
 
 								</li>
 							</ul>
-							<ul type="disc"/>
-						</td>
+							<ul type="disc">
+						</ul></td>
 					</tr>
 					<tr class="ms-rteTableEvenRow-1">
 						<td class="ms-rteTableEvenCol-1" rowspan="1" colspan="1">
@@ -239,8 +196,9 @@
 				
 				<h3 class="ms-rteElement-H3B">Перечень дисциплин</h3>
 				<p class="ms-rteElement-P">
-					<strong/>
-				</p>
+					<strong>
+				</strong></p>
+<strong>
 
 
 
@@ -263,7 +221,7 @@
 {size:612.0pt 792.0pt;margin:2.0cm 42.5pt 2.0cm 3.0cm;}
 .ExternalClass div.WordSection1
 {page:WordSection1;}
-				</style>
+</style>
 
 
 
@@ -284,12 +242,12 @@
 						<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Система государственного управления</span>
 					</li>
 					<li>
-						<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Муниципальное управление<span style="display: inline-block;"/>
+						<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Муниципальное управление<span style="display: inline-block;">
 						</span>
-					</li>
+					</span></li>
 					<li>
-						<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Государств<span style="display: inline-block;"/>енные и муниципальные финансы</span>
-					</li>
+						<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Государств<span style="display: inline-block;">енные и муниципальные финансы</span>
+					</span></li>
 					<li>
 						<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Стратегическое управление</span>
 					</li>
@@ -313,14 +271,18 @@
 					</li>
 				</ol>
 
-				<h3 class="ms-rteElement-H3B"/>
-				<br/>
 				<h3 class="ms-rteElement-H3B">
+				<br/>
+				</h3>
+<h3 class="ms-rteElement-H3B">
 					<a href="/fil/smolensk/dpo/Pages/contacts.aspx" target="_blank">Контакты​</a>
 				</h3>
-			</div>
-			<div/>
+			</strong></div>
+<strong>
+			<div>
 		</div>
-	</div>
-</div>
-<br/>
+	</strong></div>
+<strong>
+</strong></div>
+<strong>
+<br/></strong></div>
