--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/spec_zakup.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/spec_zakup.html
@@ -1,59 +1,43 @@
-<div style="display: inline;">
-	<div class="ms-rteElement-Callout2">
-		<h3 class="ms-rteElement-H3B">Цель программы</h3>
-		<p>
+<style>
+#myblank {
+font-size: 14pt;
+font-family: Times;
+text-align: justify;
+line-height: 115%; 
+}
+.link {
+font-size: 14pt;
+}
+</style>
 
 
 
 
+<div class="ms-rteElement-Callout2" id="myblank">
+	<h3 style="text-indent: 45px;">
+		<span>Цель программы</span>
+	</h3>
 
-
-
-
-
-
-
-			<style>
-.ExternalClass p, ,
-{margin-top:0cm;margin-right:0cm;margin-bottom:10.0pt;margin-left:0cm;text-align:center;line-height:115%;font-size:11.0pt;}
-.ExternalClass lt
-{;}
-			</style>
-
-
-
-
-
-
-		</p>
-		<p align="left">
-			<span>Качественное повышение уровня профессиональной
-компетентности<span>&#160; </span>в области контроля и
-управление закупками для эффективного и результативного использования средств,
-выделенных для обеспечения государственных, муниципальных и корпоративных нужд.</span>
-		</p>
-
-
-
-
-
-		<br/>
-		<p>
-			<span>
-				<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D0%A0%D0%9E%D0%A4%D1%81%D1%82%D0%B0%D0%BD%D0%B4%D0%B0%D1%80%D1%82%D1%8B_%D0%A1%D0%BF%D0%B5%D1%86%D0%B8%D0%B0%D0%BB%D0%B8%D1%81%D1%82%20%D0%B2%20%D1%81%D1%84%D0%B5%D1%80%D0%B5%20%D0%B7%D0%B0%D0%BA%D1%83%D0%BF%D0%BE%D0%BA.pdf">
-					<img class="ms-asset-icon ms-rtePosition-4" src="/_layouts/images/icpdf.png" alt=""/>Профессиональные компетенции</a>
-				<a href="/fil/smolensk/dpo/retraining/Documents/finmen.pdf"/>
-				<span style="display: inline-block;"/>
-				<span>
-					<span style="display: inline-block;"/>
-				</span>
-			</span>
+	<div>
+		<p style="text-indent: 45px;">
+			Качественное повышение уровня профессиональной компетентности в области контроля и управление закупками для эффективного и результативного использования средств, выделенных для обеспечения государственных, муниципальных и корпоративных нужд.
 			<br/>
 		</p>
+		<p class="link" style="text-indent: 45px;">
+			<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D0%A0%D0%9E%D0%A4%D1%81%D1%82%D0%B0%D0%BD%D0%B4%D0%B0%D1%80%D1%82%D1%8B_%D0%A1%D0%BF%D0%B5%D1%86%D0%B8%D0%B0%D0%BB%D0%B8%D1%81%D1%82%20%D0%B2%20%D1%81%D1%84%D0%B5%D1%80%D0%B5%20%D0%B7%D0%B0%D0%BA%D1%83%D0%BF%D0%BE%D0%BA.pdf">
+				<img class="ms-asset-icon ms-rtePosition-4" src="/_layouts/images/icpdf.png" alt=""/>Профессиональные компетенции</a>
+		</p>
 	</div>
-	<a href="/fil/smolensk/dpo/retraining/Documents/finmen.pdf">
+	<br/>
+</div>
 
-​</a>
+
+
+
+
+
+
+
 	<h3 class="ms-rteElement-H3B">Краткая информация</h3>
 	<table class="ms-rteTable-1" width="100%" cellspacing="0">
 		<tbody>
@@ -79,9 +63,9 @@
 
 
 								<style>
-								</style>
+</style>
 								<style>
-								</style>
+</style>
 
 
 
@@ -192,8 +176,9 @@
 		</div>
 		<h3 class="ms-rteElement-H3B">Перечень модулей</h3>
 		<p class="ms-rteElement-P">
-			<strong/>
-		</p>
+			<strong>
+		</strong></p>
+<strong>
 
 		
 		
@@ -210,9 +195,9 @@
 
 
 		<style>
-		</style>
+</style>
 		<style>
-		</style>
+</style>
 
 
 
@@ -301,8 +286,8 @@
 				<span style="font-size: 12pt; line-height: 115%;"> Вариативная часть</span>
 			</b>
 			<b>
-				<span style="font-size: 14pt; line-height: 115%;"/>
-			</b>
+				<span style="font-size: 14pt; line-height: 115%;">
+			</span></b>
 		</p>
 
 		<p class="MsoNormal" style="text-align: justify;">
@@ -343,14 +328,14 @@
 {margin-bottom:0cm;}
 .ExternalClass ul
 {margin-bottom:0cm;}
-		</style>
+</style>
 		<span>
 			<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D1%80%D0%B8%D0%BC%D0%B5%D1%80%D0%BD%D1%8B%D0%B5%20%D0%B7%D0%B0%D0%B4%D0%B0%D1%87%D0%B8_%D0%A1%D0%BF%D0%B5%D1%86%D0%B8%D0%B0%D0%BB%D0%B8%D1%81%D1%82%20%D0%B2%20%D1%81%D1%84%D0%B5%D1%80%D0%B5%20%D0%B7%D0%B0%D0%BA%D1%83%D0%BF%D0%BE%D0%BA_2018.pdf">Примерные
-     практико-ориентированные задания к итоговой аттестации<span style="display: inline-block;"/>
-			</a>
+     практико-ориентированные задания к итоговой аттестации<span style="display: inline-block;">
+			</span></a>
 		</span>
 		<style>
-		</style>
+</style>
 
 
 
@@ -359,9 +344,11 @@
 		<br/>
 		<br/>
 		<a target="_blank" href="/fil/smolensk/dpo/Pages/contacts.aspx">Контакты​</a>
-	</div>
+	</strong></div>
+<strong>
 	<div>
 		<br/>
 	</div>
-</div>
-<br/>
+</strong></div>
+<strong>
+<br/></strong>
