--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/gb.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/gb.html
@@ -1,13 +1,8 @@
 <style>
-#myblank {
-font-size: 14pt;
-font-family: Times;
-text-align: justify;
-line-height: 115%; 
-}
-.link {
-font-size: 14pt;
-}
+#myblank
+{font-size:14pt;font-family:Times;text-align:justify;line-height:115%;}
+.link
+{font-size:14pt;}
 </style>
 
 
@@ -142,29 +137,6 @@ font-size: 14pt;
 <div>
 
 </div>
-<div class="ms-rteElement-Callout4">
-	<div>Необходимые&#160;документы для поступления:</div>
-	<ul>
-		<li>
-			<a href="/fil/smolensk/dpo/Documents/anketa.docx" target="_blank">анкета</a>;</li>
-		<li>
-			<font color="#03497e">
-				<a href="/fil/smolensk/dpo/retraining/Documents/zayav-pp.docx" target="_blank">заявление</a>
-			</font>;</li>
-		<li>договоры:<ul>
-				<li>
-					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Fiz_lico.docx">Физическое лицо</a>
-				</li>
-				<li>
-					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Ur_lico.docx">Юридическое лицо</a>
-				</li>
-			</ul>
-		</li>
-		<li>другие документы (копия паспорта,&#160;копия документа&#160;об образовании,&#160;фотографии&#160;и&#160;др.)</li>
-	</ul>
-</div>
-<div>
-</div>
 
 
 
@@ -177,7 +149,9 @@ font-size: 14pt;
 
 <div>
 	<b>
-		<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Перечень модулей, дисциплин</span>
+		<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;"><br/></span></b></div>
+<div><b><span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;"><br/></span></b></div>
+<div><b><span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Перечень модулей, дисциплин</span>
 	</b>
 
 </div>
@@ -268,4 +242,36 @@ font-size: 14pt;
 
 
 
+</div>
+
+
+
+
+
+
+
+
+
+<div class="ms-rteElement-Callout4">
+	<div>Необходимые&#160;документы для поступления:</div>
+	<ul>
+		<li>
+			<a href="/fil/smolensk/dpo/Documents/anketa.docx" target="_blank">анкета</a>;</li>
+		<li>
+			<font color="#03497e">
+				<a href="/fil/smolensk/dpo/retraining/Documents/zayav-pp.docx" target="_blank">заявление</a>
+			</font>;</li>
+		<li>договоры:<ul>
+				<li>
+					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Fiz_lico.docx">Физическое лицо</a>
+				</li>
+				<li>
+					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Ur_lico.docx">Юридическое лицо</a>
+				</li>
+			</ul>
+		</li>
+		<li>другие документы (копия паспорта,&#160;копия документа&#160;об образовании,&#160;фотографии&#160;и&#160;др.)</li>
+	</ul>
+</div>
+<div>
 </div>
