--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/prav_reg.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/prav_reg.html
@@ -1,14 +1,9 @@
 
 <style>
-#myblank {
-font-size: 14pt;
-font-family: Times;
-text-align: justify;
-line-height: 115%; 
-}
-.link {
-font-size: 14pt;
-}
+#myblank
+{font-size:14pt;font-family:Times;text-align:justify;line-height:115%;}
+.link
+{font-size:14pt;}
 </style>
 
 
@@ -148,28 +143,11 @@ font-size: 14pt;
 	</tbody>
 </table>
 
-<div>
-	<div class="ms-rteElement-Callout4">
-		<div>Необходимые&#160;документы для поступления:</div>
-		<ul>
-			<li>
-				<a href="/fil/smolensk/dpo/Documents/anketa.docx" target="_blank">анкета</a>;</li>
-			<li>
-				<font color="#03497e">
-					<a href="/fil/smolensk/dpo/retraining/Documents/zayav-pp.docx" target="_blank">заявление</a>
-				</font>;</li>
-			<li>договоры:<ul>
-					<li>
-					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Fiz_lico.docx">Физическое лицо</a>
-				</li>
-				<li>
-					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Ur_lico.docx">Юридическое лицо</a>
-				</li>
-				</ul>
-			</li>
-			<li>другие документы (копия паспорта,&#160;копия документа&#160;об образовании,&#160;фотографии&#160;и&#160;др.)</li>
-		</ul>
-	</div>
+
+
+
+
+
 	
 	
 	
@@ -178,56 +156,10 @@ font-size: 14pt;
 	
 	
 	
-	
-	
-	
-	
-	<h3 class="ms-rteElement-H3B">
-
-
-
-
-
-
-
-
-
-
-
-		<style>
-.ExternalClass p.MsoNormal, .ExternalClass li.MsoNormal, .ExternalClass div.MsoNormal
-{margin:0cm;margin-bottom:.0001pt;text-align:center;text-indent:24.1pt;line-height:107%;font-size:11.0pt;font-family:"Calibri","sans-serif";}
-.ExternalClass p.MsoListParagraph, .ExternalClass li.MsoListParagraph, .ExternalClass div.MsoListParagraph
-{margin-top:0cm;margin-right:0cm;margin-bottom:0cm;margin-left:36.0pt;margin-bottom:.0001pt;text-align:center;text-indent:24.1pt;line-height:107%;font-size:11.0pt;font-family:"Calibri","sans-serif";}
-.ExternalClass p.MsoListParagraphCxSpFirst, .ExternalClass li.MsoListParagraphCxSpFirst, .ExternalClass div.MsoListParagraphCxSpFirst
-{margin-top:0cm;margin-right:0cm;margin-bottom:0cm;margin-left:36.0pt;margin-bottom:.0001pt;text-align:center;text-indent:24.1pt;line-height:107%;font-size:11.0pt;font-family:"Calibri","sans-serif";}
-.ExternalClass p.MsoListParagraphCxSpMiddle, .ExternalClass li.MsoListParagraphCxSpMiddle, .ExternalClass div.MsoListParagraphCxSpMiddle
-{margin-top:0cm;margin-right:0cm;margin-bottom:0cm;margin-left:36.0pt;margin-bottom:.0001pt;text-align:center;text-indent:24.1pt;line-height:107%;font-size:11.0pt;font-family:"Calibri","sans-serif";}
-.ExternalClass p.MsoListParagraphCxSpLast, .ExternalClass li.MsoListParagraphCxSpLast, .ExternalClass div.MsoListParagraphCxSpLast
-{margin-top:0cm;margin-right:0cm;margin-bottom:0cm;margin-left:36.0pt;margin-bottom:.0001pt;text-align:center;text-indent:24.1pt;line-height:107%;font-size:11.0pt;font-family:"Calibri","sans-serif";}
-.ExternalClass .MsoChpDefault
-{font-family:"Calibri","sans-serif";}
-.ExternalClass .MsoPapDefault
-{text-align:center;text-indent:24.1pt;line-height:107%;}
-@page WordSection1
-{size:612.0pt 792.0pt;margin:2.0cm 42.5pt 2.0cm 3.0cm;}
-.ExternalClass div.WordSection1
-{page:WordSection1;}
-.ExternalClass ol
-{margin-bottom:0cm;}
-.ExternalClass ul
-{margin-bottom:0cm;}
-		</style>
-
-
-
-
-
-
-	</h3>
 	<p class="MsoNormal" align="left" style="margin-bottom: 6pt; text-align: left; text-indent: 0cm; line-height: normal; background: white none repeat scroll 0% 0%;">
 		<b>
-			<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Перечень модулей, дисциплин</span>
+			<span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;"><br/></span></b></p>
+<p class="MsoNormal" align="left" style="margin-bottom: 6pt; text-align: left; text-indent: 0cm; line-height: normal; background: white none repeat scroll 0% 0%;"><b><span style="font-size: 12pt; font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Перечень модулей, дисциплин</span>
 		</b>
 	</p>
 
@@ -271,8 +203,8 @@ font-size: 14pt;
 служба </span>
 		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">предприятий, организаций и учреждений.</span>
 		<b>
-			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;"/>
-		</b>
+			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
+		</span></b>
 	</p>
 
 	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
@@ -306,89 +238,62 @@ font-size: 14pt;
 	<p class="MsoListParagraphCxSpFirst" align="left" style="margin: 3pt 0cm 0.0001pt 35.7pt; text-align: left; text-indent: -17.85pt; line-height: normal; background: white none repeat scroll 0% 0%;">
 		<b>
 			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-				<span>1.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
-				</span>
-			</span>
-		</b>
-		<span lang="EN-US" style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Муниципальное
-право России</span>
+				<span>1. Муниципальное право России</span>
 		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">.</span>
-	</p>
+	</span></b></p>
+<b>
 
 	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
 		<b>
 			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-				<span>2.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
-				</span>
-			</span>
-		</b>
-		<span lang="EN-US" style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Трудовое
-право</span>
+				<span>2. Трудовое право</span>
 		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">.</span>
-	</p>
+	</span></b></p>
+<b>
 
 	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
 		<b>
 			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-				<span>3.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
-				</span>
-			</span>
-		</b>
-		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Гражданское
-право.</span>
+				<span>3. Гражданское право.</span>
 		<b>
-			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;"/>
-		</b>
-	</p>
+			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
+		</span></b>
+	</span></b></p>
+<b>
 
 	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
 		<b>
 			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-				<span>4.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
-				</span>
-			</span>
-		</b>
-		<span lang="EN-US" style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Г</span>
-		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">ражданский процесс.</span>
-	</p>
+				<span>4. Гражданский процесс.</span>
+	</span></b></p>
+<b>
 
 	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
 		<b>
 			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-				<span>5.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
-				</span>
-			</span>
-		</b>
-		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Уголовное
-право.</span>
+				<span>5. Уголовное право.</span>
 		<b>
-			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;"/>
-		</b>
-	</p>
+			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
+		</span></b>
+	</span></b></p>
+<b>
 
 	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
 		<b>
 			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-				<span>6.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
-				</span>
-			</span>
-		</b>
-		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Уголовный
-процесс.</span>
+				<span>6. Уголовный процесс.</span>
 		<b>
-			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;"/>
-		</b>
-	</p>
+			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
+		</span></b>
+	</span></b></p>
+<b>
 
 	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
 		<b>
 			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
-				<span>7.<span style="font: 7pt &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160; </span>
-				</span>
-			</span>
-		</b>
-		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Арбитражный процесс.</span>
-	</p>
+				<span>7. Арбитражный процесс.</span>
+	</span></b></p>
+<b>
 
 	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
 		<b>
@@ -412,8 +317,8 @@ font-size: 14pt;
 		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Финансовое
 право.</span>
 		<b>
-			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;"/>
-		</b>
+			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
+		</span></b>
 	</p>
 
 	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
@@ -426,8 +331,8 @@ font-size: 14pt;
 		<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">Особенности
 правового регулирования экономической деятельности организации.</span>
 		<b>
-			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;"/>
-		</b>
+			<span style="font-family: &quot;times new roman&quot;, &quot;serif&quot;;">
+		</span></b>
 	</p>
 
 	<p class="MsoListParagraphCxSpMiddle" align="left" style="text-align: left; text-indent: -18pt; line-height: normal; background: white none repeat scroll 0% 0%;">
@@ -451,7 +356,7 @@ font-size: 14pt;
 действий</span>
 	</p>
 
-	<span style="display: inline-block;"/>
+	<span style="display: inline-block;">
 
 
 
@@ -461,4 +366,37 @@ font-size: 14pt;
 	<h3 class="ms-rteElement-H3B">
 		<a href="/fil/smolensk/dpo/Pages/contacts.aspx" target="_blank">Контакты​</a>
 	</h3>
-</div>
+</span>
+
+
+
+
+
+
+
+
+
+<div>
+	<div class="ms-rteElement-Callout4">
+		<div>Необходимые&#160;документы для поступления:</div>
+		<ul>
+			<li>
+				<a href="/fil/smolensk/dpo/Documents/anketa.docx" target="_blank">анкета</a>;</li>
+			<li>
+				<font color="#03497e">
+					<a href="/fil/smolensk/dpo/retraining/Documents/zayav-pp.docx" target="_blank">заявление</a>
+				</font>;</li>
+			<li>договоры:<ul>
+					<li>
+					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Fiz_lico.docx">Физическое лицо</a>
+				</li>
+				<li>
+					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Ur_lico.docx">Юридическое лицо</a>
+				</li>
+				</ul>
+			</li>
+			<li>другие документы (копия паспорта,&#160;копия документа&#160;об образовании,&#160;фотографии&#160;и&#160;др.)</li>
+		</ul>
+	</div>
+	
+</div></b></b></b></b></b></b></b>
